# mvc-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  filereader.cpp  filereader.h  main.cpp  main.qml  mvc-demo_cs_CZ.ts  mvc-demo_en_US.ts  qml.qrc  run.sh  salary.json
.github/workflows/: c-cpp.yml  clang-format-check.yml  ubuntu.yml  windows.yml
